# Embedded-adaptive-control-system-for-electric-heating

./: CMakeLists.txt  platformio.ini
src/: CMakeLists.txt  hw_config.h  main.c
src/controller/: adaptive_algorythm.c  adaptive_algorythm.h  schedule_manager.c  schedule_manager.h  temp_setpoint_manager.c  temp_setpoint_manager.h
src/controller/actuator/: pid_controller.c  pid_controller.h  pwm_manager.c  pwm_manager.h  relay_controller.c  relay_controller.h
src/controller/display/: display_controller.c  display_controller.h
src/controller/input/: button_controller.c  button_controller.h
src/controller/sensor/: presence_controller.c  presence_controller.h  temp_controller.c  temp_controller.h
src/drivers/actuator/: relay_driver.c  relay_driver.h
src/drivers/input/: button_driver.c  button_driver.h
src/drivers/sensor/: hlk_ld2420_driver.c  hlk_ld2420_driver.h  temp_sensor_driver.c  temp_sensor_driver.h
src/model/: main_control.h  settings_manager.c  settings_manager.h  system_state.c  system_state.h  time_storage.c  time_storage.h
src/networking/: mqtt_client.c  mqtt_client.h  mqtt_task.c  mqtt_task.h  ntp_time_sync.c  ntp_time_sync.h  weather_client.c  weather_client.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
src/view/: app.js  display_manager.c  display_manager.h  index.html  style.css
